--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".EarthQuakeDetail"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
             android:name=".SearchActivity"
-            android:label="@string/app_bar_search_title">
-
-        </activity>
-
+            android:label="@string/app_bar_search_title"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
